--- a/scha_z62.html
+++ b/scha_z62.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color: gray;">
 	<p> Pytania?
-	<p lang="pl">Jak się masz</p>
+	<p lang="pl">Jak się czujesz</p>
 	<p lang="en">How are you</p>
 </body>
 </html>
